--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "vite-vue-tailwindcss-started-kit",
   "version": "0.1.0",
   "author": "Benito Anagua",
   "license": "MIT",
@@ -18,6 +18,8 @@
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
+    "@storybook/addons": "^6.4.9",
+    "@storybook/theming": "^6.4.9",
     "@storybook/vue3": "^6.4.9",
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.0",
